[package]
name = "rcon_bruteforcer"
version = "0.1.1"
authors = ["Kawaii Neko Lolis <marco@ccbluex.net>"]
edition = "2018"

[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
futures = "0.3"
bruteforce = "0.2.0"
console = "0.14.1"
rcon = "0.4.0"

[dependencies.clap]
version = "2.33"
default-features = false

features = [ "suggestions", "color" ]